--- a/bloodmallet/general_website/templates/general_website/layout_base.html
+++ b/bloodmallet/general_website/templates/general_website/layout_base.html
@@ -5,8 +5,18 @@
     {% include 'general_website/layout_top_nav.html' %}
 
     <div class="container-fluid">
-        {% block content %}
-        {% endblock %}
+        <div class="row">
+            <div class="col-xl-2 col-lg-2 col-md-1">
+                {# free real estate #}
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-10">
+                {% block content %}
+                {% endblock %}
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-1">
+                {# free real estate #}
+            </div>
+        </div>
     </div>
     {% include 'general_website/layout_bottom_nav.html' %}
 
