add some more placeholder text to default page

--- a/bloodmallet/general_website/templates/general_website/default.html
+++ b/bloodmallet/general_website/templates/general_website/default.html
@@ -15,5 +15,8 @@ Hello World! {{ text }}
         <button type="submit" class="btn btn-primary">Submit</button>
     {% endbuttons %}
 </form>
+<a href="something.html">here is nothing</a>
+Something something
+<p>Something could be here too</p>
 
 {% endblock %}
