--- a/bloodmallet/general_website/templates/general_website/layout_bottom_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_bottom_nav.html
@@ -1,28 +1,59 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
-    <a class="navbar-brand" href="">Bottom navbar</a>
-    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#bottom_nav_collapse" aria-controls="bottom_nav_collapse"
-        aria-expanded="false" aria-label="Toggle bottom navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="bottom_nav_collapse">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+{% load static %}
+<footer>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark bottom-nav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarBottomMenu" aria-controls="navbarBottomMenu"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarBottomMenu">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="trinket_performance.html" id="translate_trinket_performance">Trinket performance</a>
+            </li>
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="faq.html" id="translate_faq">FAQ</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
+                <a class="nav-link" href="https://github.com/Bloodmallet/bloodmallet.github.io/issues">
+                <svg class="svg-icon">
+                    <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#github"></use>
+                </svg>
+                <span class="username" id="translate_report_an_error">Report an error</span>
+                </a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Action 1</a>
-                    <a class="dropdown-item" href="#">Action 2</a>
+            <li class="nav-item patron-link">
+                <a class="nav-link" href="https://www.patreon.com/bloodmallet">
+                <svg class="svg-icon">
+                    <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#patreon"></use>
+                </svg>
+                <span style="color: #F96854;">Patreon</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://twitter.com/bloodmallet">
+                <div class="svg-icon">
+                    <svg class="svg-icon">
+                    <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#twitter"></use>
+                    </svg>
                 </div>
+                <span class="username">@bloodmallet</span>
+                </a>
             </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
+            <li class="nav-item">
+                <a class="nav-link" href="https://discord.gg/sXfmMkm">
+                <div class="svg-icon">
+                    <svg class="svg-icon">
+                    <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#discord"></use>
+                    </svg>
+                </div>
+                <span class="username">bloodmallet.com</span>
+                </a>
+            </li>
+            </ul>
+
+        </div>
+    </nav>
+</footer>
