--- a/bloodmallet/general_website/templates/general_website/layout_base.html
+++ b/bloodmallet/general_website/templates/general_website/layout_base.html
@@ -1,23 +1,28 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
     {% include 'general_website/layout_head.html' %}
 <body>
     {% include 'general_website/layout_top_nav.html' %}
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-2 col-lg-2 col-md-1">
-                {# free real estate #}
-            </div>
-            <div class="col-xl-8 col-lg-8 col-md-10">
-                {% block content %}
-                {% endblock %}
-            </div>
-            <div class="col-xl-2 col-lg-2 col-md-1">
-                {# free real estate #}
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-2 col-lg-2 col-md-1">
+                    {# free real estate #}
+                </div>
+                <div class="col-xl-8 col-lg-8 col-md-10">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-1">
+                    {# free real estate #}
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+    <div id="background_image" style="background-image: url('{% static 'general_website/assets/bloodmallet.svg'%}');"></div>
     {% include 'general_website/layout_bottom_nav.html' %}
 
     {# importer of js scripts #}
