--- a/bloodmallet/general_website/templates/general_website/layout_top_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_top_nav.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load replace_underscore_with_space %}
 <header>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top top-nav">
         <a class="navbar-brand" href="{% url 'index' %}">
@@ -11,6 +12,103 @@
         </button>
         <!-- Menu list -->
         <div class="collapse navbar-collapse" id="navbarTopMenu">
+
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link active" href="trinket_performance.html" id="translate_trinket_performance">General</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="trinket_performance.html" id="translate_trinket_performance">Trinket performance</a>
+            </li>
+            </ul>
+
+
+            <!-- Settings -->
+            <ul class="navbar-nav ml-auto">
+                {% if not request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">Login</a>
+                    <a class="nav-link" href="{% url 'signup' %}" id="navbarSignup">Signup</a>
+                {% endif %}
+                <a class="nav-link dropdown-toggle" href="" id="navbarSettingsMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings
+                </a>
+                <form class="dropdown-menu btn-full dropdown-menu-right p-4" aria-labelledby="navbarSettingsMenu" id="settingsDropDown">
+                    <!-- dark mode checkbox, ml-auto is margin-left auto max -->
+                    <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="darkModeCheckbox" style="cursor: pointer" checked>
+                        <label class="form-check-label" style="cursor: pointer" id="translate_dark_mode" for="darkModeCheckbox">
+                        dark mode
+                        </label>
+                    </div>
+                    </div>
+                    <div class="form-group">
+                    <label class="form-control-label" id="translate_language" for="languageSelector">Language:</label>
+                    <br/>
+                    <select id="languageSelector" title="Language">
+                        <option value="CN">简体中文</option>
+                        <option value="DE">Deutsch</option>
+                        <option value="EN" selected>English</option>
+                        <option value="ES">Español</option>
+                        <option value="FR">Français</option>
+                        <option value="IT">Italiano</option>
+                        <option value="KO">한국어</option>
+                        <option value="PT">Português Brasileiro</option>
+                        <option value="RU">Русский</option>
+                    </select>
+                    </div>
+                    <div class="form-group">
+                    <label class="form-control-label" for="value_style_selector">Chart mode:</label>
+                    <br/>
+                    <select id="value_style_selector" title="Chart value style">
+                        <option value="absolute_gain" selected>Δ - absolute dps gain</option>
+                        <option value="relative_gain">% - relative dps gain</option>
+                        <option value="absolute_value">|x| - absolute value</option>
+                    </select>
+                    </div>
+                    <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="inconized_charts_checkbox" style="cursor: pointer">
+                    <label class="form-check-label" style="cursor: pointer" id="translate_iconize_chart" for="inconized_charts_checkbox">
+                        show icons in chart
+                    </label>
+                    </div>
+                </form>
+                {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">Logout</a>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="navBarDataMenu">
+        <!-- Menu button if device is too small for full menu -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarClassMenu" aria-controls="navbarClassMenu"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Menu list -->
+        <div class="collapse navbar-collapse" id="navbarClassMenu">
+            <!-- Wow classes -->
+            <ul class="navbar-nav">
+
+                {# create a list of all specs and autogenerate the standard links #}
+
+                {% with "death_knight demon_hunter druid hunter mage monk paladin priest rogue shaman warlock warrior" as specs %}
+                    {% for spec in specs.split %}
+                        <li class="nav-item">
+                            <a class="nav-link {{ spec }}-color {{ spec }}-menu-border translate_{{ spec }}" href="#{{ spec }}" id="navbar_{{ spec }}_menu">{{ spec|title|replace_underscore_with_space }}</a>
+                        </li>
+                    {% endfor %}
+                {% endwith %}
+
+            </ul>
+
+        </div>
+    </nav>
+</header>
+
+
+
+{% comment %}
             <!-- Wow classes -->
             <ul class="navbar-nav">
 
@@ -151,54 +249,4 @@
                 <a class="dropdown-item warrior-button translate_fury" href="{% url 'index' %}#warrior_fury">Fury</a>
                 </div>
             </li>
-            </ul>
-
-            <!-- Settings -->
-            <ul class="navbar-nav ml-auto">
-            <a class="nav-link dropdown-toggle" href="" id="navbarSettingsMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings
-            </a>
-            <form class="dropdown-menu btn-full dropdown-menu-right p-4" aria-labelledby="navbarSettingsMenu" id="settingsDropDown">
-                <!-- dark mode checkbox, ml-auto is margin-left auto max -->
-                <div class="form-group">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="darkModeCheckbox" style="cursor: pointer" checked>
-                    <label class="form-check-label" style="cursor: pointer" id="translate_dark_mode" for="darkModeCheckbox">
-                    dark mode
-                    </label>
-                </div>
-                </div>
-                <div class="form-group">
-                <label class="form-control-label" id="translate_language" for="languageSelector">Language:</label>
-                <br/>
-                <select id="languageSelector" title="Language">
-                    <option value="CN">简体中文</option>
-                    <option value="DE">Deutsch</option>
-                    <option value="EN" selected>English</option>
-                    <option value="ES">Español</option>
-                    <option value="FR">Français</option>
-                    <option value="IT">Italiano</option>
-                    <option value="KO">한국어</option>
-                    <option value="PT">Português Brasileiro</option>
-                    <option value="RU">Русский</option>
-                </select>
-                </div>
-                <div class="form-group">
-                <label class="form-control-label" for="value_style_selector">Chart mode:</label>
-                <br/>
-                <select id="value_style_selector" title="Chart value style">
-                    <option value="absolute_gain" selected>Δ - absolute dps gain</option>
-                    <option value="relative_gain">% - relative dps gain</option>
-                    <option value="absolute_value">|x| - absolute value</option>
-                </select>
-                </div>
-                <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="inconized_charts_checkbox" style="cursor: pointer">
-                <label class="form-check-label" style="cursor: pointer" id="translate_iconize_chart" for="inconized_charts_checkbox">
-                    show icons in chart
-                </label>
-                </div>
-            </form>
-            </ul>
-        </div>
-    </nav>
-</header>
+            </ul> {% endcomment %}
