--- a/bloodmallet/general_website/templates/general_website/layout_top_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_top_nav.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load replace_underscore_with_space %}
 <header>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top top-nav">
         <a class="navbar-brand" href="{% url 'index' %}">
@@ -15,10 +14,10 @@
 
             <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link active" href="trinket_performance.html" id="translate_trinket_performance">General</a>
+                <a class="nav-link translate_general" href="{% url 'index' %}" id="general_link">General</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="trinket_performance.html" id="translate_trinket_performance">Trinket performance</a>
+                <a class="nav-link translate_trinket_performance" href="" id="trinket_performance_link">Trinket performance</a>
             </li>
             </ul>
 
@@ -79,31 +78,6 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="navBarDataMenu">
-        <!-- Menu button if device is too small for full menu -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarClassMenu" aria-controls="navbarClassMenu"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Menu list -->
-        <div class="collapse navbar-collapse" id="navbarClassMenu">
-            <!-- Wow classes -->
-            <ul class="navbar-nav">
-
-                {# create a list of all specs and autogenerate the standard links #}
-
-                {% with "death_knight demon_hunter druid hunter mage monk paladin priest rogue shaman warlock warrior" as specs %}
-                    {% for spec in specs.split %}
-                        <li class="nav-item">
-                            <a class="nav-link {{ spec }}-color {{ spec }}-menu-border translate_{{ spec }}" href="#{{ spec }}" id="navbar_{{ spec }}_menu">{{ spec|title|replace_underscore_with_space }}</a>
-                        </li>
-                    {% endfor %}
-                {% endwith %}
-
-            </ul>
-
-        </div>
-    </nav>
 </header>
 
 
