--- a/bloodmallet/general_website/templates/general_website/layout_bottom_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_bottom_nav.html
@@ -7,9 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarBottomMenu">
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="trinket_performance.html" id="translate_trinket_performance">Trinket performance</a>
-            </li>
+            {% comment %} something could be here {% endcomment %}
             </ul>
 
             <ul class="navbar-nav ml-auto">
