add settings nav to all socialaccount pages

--- a/bloodmallet/general_website/templates/allauth/socialaccount/base.html
+++ b/bloodmallet/general_website/templates/allauth/socialaccount/base.html
@@ -1,1 +1,8 @@
 {% extends "account/base.html" %}
+
+{# Ensure that the secondary menu is on top of all social account pages #}
+{% block precontent%}
+{% with page='connections' %}
+    {% include 'general_website/layout_settings_nav.html' %}
+{% endwith %}
+{% endblock %}
