--- a/bloodmallet/general_website/templates/general_website/layout_head.html
+++ b/bloodmallet/general_website/templates/general_website/layout_head.html
@@ -8,5 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'general_website/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% sass_src 'general_website/css/base.scss' %}" />
     <link rel="shortcut icon" type="image/png" href="{% static 'general_website/favicon.ico' %}"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <!--<script src="main.js"></script>-->
 </head>
