--- a/bloodmallet/general_website/templates/general_website/layout_top_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_top_nav.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% comment %} <header> {% endcomment %}
-    <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark top-nav">
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark top-nav light-border-bottom">
         <a class="navbar-brand" href="{% url 'index' %}">
             <img src="{% static 'general_website/assets/bloodmallet.svg' %}" style="width: 35px; vertical-align:top;" /> <span id="brand-name">bloodmallet</span>
         </a>
