--- a/bloodmallet/general_website/templates/general_website/layout_settings_nav.html
+++ b/bloodmallet/general_website/templates/general_website/layout_settings_nav.html
@@ -19,6 +19,11 @@
                 {% if request.user.is_authenticated %}
                 <li class="navbar-text priest-color navbar-spacer">|</li>
                 <li class="nav-item">
+                    <a class="nav-link priest-color priest-menu-border{% if page == 'profile' %} active{% endif %}" href="{% url 'profile' %}">Profile</a>
+                </li>
+
+                <li class="navbar-text priest-color navbar-spacer">|</li>
+                <li class="nav-item">
                     <a class="nav-link priest-color priest-menu-border{% if page == 'connections' %} active{% endif %}" href="{% url 'account_connections' %}">Connections</a>
                 </li>
                 {% endif %}
